Fix full height on mobile using 100% on html

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,12 @@
   -webkit-text-size-adjust: 100%;
 }
 
+html {
+  height: 100%;
+}
+
 body {
-  @apply flex place-items-center min-h-screen font-text text-lg leading-snug tracking-wider;
+  @apply flex place-items-center min-h-full font-text text-lg leading-snug tracking-wider;
   font-stretch: condensed;
 }
 
